<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mikronomy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_productos">Productos</string>
    <string name="action_carro">Carro compra</string>
    <string name="title_activity_productos">Productos</string>
    <string name="title_activity_carro_compra">CarroCompra</string>
    <string name="title_activity_productos_form">ProductosFormActivity</string>
    <!-- Etiquetas-->
    <string name="label_marca_producto">Marca</string>
    <string name="label_nombre_producto">Nombre del producto</string>
    <string name="label_tienda">Tienda</string>
    <string name="label_precio">Precio</string>
    <string name="label_secciones">Secciones</string>
    <string name="label_aniadir_tienda">Añadir tienda</string>
    <string name="label_aceptar">Aceptar</string>

    <string name="unidad_medida">Ud. medida</string>
    <string name="campo_obligatorio_marca">La marca del producto es obligatoria</string>
    <string name="campo_obligatorio_producto">El nombre del producto es obligatorio</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>
    <drawable name="darkgrey">#606060</drawable>

</resources>