<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.map.mikronomy.activities.ProductosFormActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/LAY_ProductosForm" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical" >
            <TextView
                android:id="@+id/LAB_MarcaProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_marca_producto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_column="0" />

            <EditText
                android:inputType="text"
                android:id="@+id/TXT_Marca"
                android:layout_height="wrap_content"
                android:layout_width="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical|left" >
            <TextView
                android:layout_column="0"
                android:id="@+id/LAB_NombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre_producto"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_column="1"
                android:inputType="text"
                android:id="@+id/TXT_NombreProducto"
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <TextView
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_tienda"
                android:id="@+id/LAB_Tienda"
                android:padding="5dp" />
        </TableRow>
        <TableRow  android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <Spinner
                android:layout_column="0"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/SPI_Tienda"
                android:spinnerMode="dropdown" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/label_aniadir_tienda"
                android:textSize="13sp"
                android:id="@+id/BUT_AddTienda"
                android:enabled="true"
                android:layout_gravity="center|left"
                android:layout_column="1" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <TextView
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_secciones"
                android:id="@+id/LAB_Secciones"
                android:padding="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <Spinner
                android:layout_column="0"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/SPI_Secciones"
                android:spinnerMode="dropdown"
                android:minWidth="180dp"
                android:padding="5dp" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_precio"
                android:id="@+id/LAB_Precio"
                android:layout_column="0" />
            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/DecTXT_Precio"
                android:layout_column="1" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/unidad_medida"
                android:id="@+id/LAB_UnidadMedida"
                android:layout_column="0" />
            <Spinner
                android:layout_column="1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/SPI_UdMedida" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal|left">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_aceptar"
                android:textSize="13sp"
                android:id="@+id/BUT_Aceptar" />
        </TableRow>
    </TableLayout>
</LinearLayout>
</ScrollView>